--- a/word-game/index.html
+++ b/word-game/index.html
@@ -31,7 +31,8 @@
     <div class="question" id="question">Loading...</div>
     <input type="text" id="answer" autocomplete="off" />
     <div class="stats">
-      Correct: <span id="correct">0</span> | Incorrect: <span id="incorrect">0</span><br>
+     👍
+✔️: <span id="correct">0</span> | ❌: <span id="incorrect">0</span><br>
       Time Left: <span id="timer">59</span> sec
     </div>
     <div id="result" style="margin-top:10px; font-size:18px; font-weight:bold;"></div>
