--- a/word-game/index.html
+++ b/word-game/index.html
@@ -4,151 +4,180 @@
 <meta charset="UTF-8">
 <title>Alphabet Game</title>
 <style>
-  body { font-family: Arial, sans-serif; background:#f4f8ff; display:flex; flex-direction:column; align-items:center; padding:20px;}
-  h1 { color:#333; }
-  #gameBox { background:#fff; padding:20px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.2); text-align:center; width:330px;}
-  .question { font-size:20px; margin:15px 0; font-weight:bold; }
-  input { padding:8px; width:100px; font-size:18px; text-align:center; border-radius:6px; border:1px solid #ccc;}
-  select { padding:6px; border-radius:6px; margin-bottom:10px;}
-  .stats { margin-top:15px; font-size:16px; }
-  #timer { font-weight:bold; color:#d9534f; }
+  body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+  #question { font-size: 28px; margin: 20px; font-weight: bold; }
+  #answer { font-size: 20px; padding: 5px; }
+  #feedback { font-size: 20px; margin: 10px; height: 30px; }
+  .correct { color: green; font-weight: bold; }
+  .wrong { color: red; font-weight: bold; }
+  .info { margin: 10px; font-size: 18px; }
+  select { font-size: 18px; padding: 5px; margin: 10px; }
 </style>
 </head>
 <body>
-  <h1>Alphabet Game</h1>
-  <div id="gameBox">
-    <div>
-      <label>Mode: 
-        <select id="mode">
-          <option value="MIX" selected>Mix</option>
-          <option value="L2P">Alphabet → Position</option>
-          <option value="P2L">Position → Alphabet</option>
-          <option value="P2LR">Position → Alphabet (Reverse)</option>
-          <option value="ADD">Addition / Subtraction</option>
-        </select>
-      </label>
-    </div>
-    <div class="question" id="question">Loading...</div>
-    <input type="text" id="answer" autocomplete="off" />
-    <div class="stats">
-     👍
-✔️: <span id="correct">0</span> | ❌: <span id="incorrect">0</span><br>
-      Time Left: <span id="timer">59</span> sec
-    </div>
-    <div id="result" style="margin-top:10px; font-size:18px; font-weight:bold;"></div>
-  </div>
+
+<h2>Alphabet Game</h2>
+
+<label>Mode: 
+  <select id="mode">
+    <option value="MIX">Mix</option>
+    <option value="L2P">Alphabet → Position</option>
+    <option value="P2L">Position → Alphabet</option>
+    <option value="P2LR">Position → Alphabet Reverse</option>
+    <option value="ADD">Addition / Subtraction</option>
+  </select>
+</label>
+
+<div id="timer" class="info">Time: 59</div>
+<div id="score" class="info">Score: 0</div>
+<div id="highscore" class="info">High Score: 0</div>
+
+<div id="question"></div>
+<input type="text" id="answer" autocomplete="off" placeholder="Type answer...">
+<div id="feedback"></div>
 
 <script>
-const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("");
-let state = {
-  correct:0, incorrect:0, current:null, timer:59, interval:null, mode:"MIX"
-};
+const qEl = document.getElementById("question");
+const aEl = document.getElementById("answer");
+const feedback = document.getElementById("feedback");
+const scoreEl = document.getElementById("score");
+const highEl = document.getElementById("highscore");
+const timerEl = document.getElementById("timer");
+const modeSel = document.getElementById("mode");
 
-function rand(n){ return Math.floor(Math.random()*n); }
+let state = { mode: "MIX", current: {}, score: 0, timer: 59, tId: null };
+let highscores = JSON.parse(localStorage.getItem("alphaHighscores") || "{}");
+
+function posToLetter(p){ return String.fromCharCode(64 + ((p-1)%26)+1); }
+function letterToPos(l){ return l.toUpperCase().charCodeAt(0)-64; }
+
+function nextQuestion(){
+  let mode = state.mode;
+  if(mode==="MIX"){
+    const modes = ["L2P","P2L","P2LR","ADD"];
+    mode = modes[Math.floor(Math.random()*modes.length)];
+  }
+  let q, expect;
+
+  if(mode==="L2P"){
+    const letter = posToLetter(Math.floor(Math.random()*26)+1);
+    q = `What is the position of '${letter}'?`;
+    expect = letterToPos(letter).toString();
+  }
+  else if(mode==="P2L"){
+    const pos = Math.floor(Math.random()*26)+1;
+    q = `Which letter is at position ${pos}?`;
+    expect = posToLetter(pos).toUpperCase();
+  }
+  else if(mode==="P2LR"){
+    const pos = Math.floor(Math.random()*26)+1;
+    q = `Which letter is at reverse position ${pos}? (Z=1)`;
+    expect = posToLetter(27-pos).toUpperCase();
+  }
+  else if(mode==="ADD"){
+    if(Math.random()<0.5){ // letter + number or subtraction
+      let letter = posToLetter(Math.floor(Math.random()*26)+1);
+      let shift = Math.floor(Math.random()*25)+1;
+      if(Math.random()<0.5){
+        q = `${letter} + ${shift} = ?`;
+        let pos = (letterToPos(letter)+shift-1)%26+1;
+        expect = posToLetter(pos).toUpperCase();
+      } else {
+        let pos = letterToPos(letter);
+        if(pos<=shift) pos += 26;
+        q = `${letter} - ${shift} = ?`;
+        expect = posToLetter(pos-shift).toUpperCase();
+      }
+    } else { // letter ± letter
+      let l1 = posToLetter(Math.floor(Math.random()*26)+1);
+      let l2 = posToLetter(Math.floor(Math.random()*26)+1);
+      let p1 = letterToPos(l1), p2 = letterToPos(l2);
+      if(p1 < p2) [l1,l2,p1,p2] = [l2,l1,p2,p1]; // bigger first
+      if(Math.random()<0.5){
+        q = `${l1} + ${l2} = ?`;
+        expect = posToLetter((p1+p2-1)%26+1).toUpperCase();
+      } else {
+        q = `${l1} - ${l2} = ?`;
+        expect = posToLetter(p1-p2+1).toUpperCase();
+      }
+    }
+  }
+
+  state.current = { expect };
+  qEl.textContent = q;
+  aEl.value = "";
+  aEl.focus();
+  feedback.textContent = "";
+}
+
+function checkAnswer(){
+  let ans = aEl.value.trim().toUpperCase();
+  if(ans === state.current.expect){
+    state.score++;
+    scoreEl.textContent = "Score: "+state.score;
+    feedback.textContent = "✅ Correct!";
+    feedback.className = "correct";
+    setTimeout(nextQuestion, 600);
+  } else {
+    feedback.textContent = "❌ Wrong!";
+    feedback.className = "wrong";
+  }
+}
 
 function startTimer(){
-  clearInterval(state.interval);
+  clearInterval(state.tId);
   state.timer = 59;
-  document.getElementById("timer").textContent = state.timer;
-  state.interval = setInterval(()=>{
+  timerEl.textContent = "Time: "+state.timer;
+  state.tId = setInterval(()=>{
     state.timer--;
-    document.getElementById("timer").textContent = state.timer;
-    if(state.timer <= 0){
-      clearInterval(state.interval);
+    timerEl.textContent = "Time: "+state.timer;
+    if(state.timer<=0){
+      clearInterval(state.tId);
       endGame();
     }
   },1000);
 }
 
 function endGame(){
-  document.getElementById("result").textContent = `⏳ Time Up! ✅ ${state.correct} | ❌ ${state.incorrect}`;
-  document.getElementById("answer").disabled = true;
+  let mode = state.mode;
+  if(mode==="MIX") mode="MIX";
+  if(!highscores[mode] || state.score>highscores[mode]){
+    highscores[mode]=state.score;
+    localStorage.setItem("alphaHighscores", JSON.stringify(highscores));
+  }
+  alert("Time's up! Your Score: "+state.score);
+  updateHighscore();
 }
 
-function nextQuestion(){
-  const mode = state.mode === "MIX" ? ["L2P","P2L","P2LR","ADD"][rand(4)] : state.mode;
-  let q="", expect="";
-
-  if(mode==="L2P"){
-    let l = letters[rand(26)];
-    q = `Position of "${l}"?`;
-    expect = (letters.indexOf(l)+1).toString();
-  }
-  else if(mode==="P2L"){
-    let p = rand(26)+1;
-    q = `Alphabet at position ${p}?`;
-    expect = letters[p-1];
-  }
-  else if(mode==="P2LR"){
-    let p = rand(26)+1;
-    q = `Alphabet at reverse position ${p}? (Z=1)`;
-    expect = letters[26-p];
-  }
-  else if(mode==="ADD"){
-    if(Math.random()<0.5){
-      // Letter ± Number
-      let l = letters[rand(26)], n = rand(25)+1;
-      if(Math.random()<0.5){
-        q = `${l} + ${n} = ?`;
-        expect = letters[(letters.indexOf(l)+n)%26];
-      } else {
-        let pos = letters.indexOf(l)+1;
-        if(pos<=n){ pos=n+1; l=letters[pos-1]; }
-        q = `${l} - ${n} = ?`;
-        expect = letters[(letters.indexOf(l)-n+26)%26];
-      }
-    } else {
-      // Letter ± Letter
-      let a=letters[rand(26)], b=letters[rand(26)];
-      let pa=letters.indexOf(a)+1, pb=letters.indexOf(b)+1;
-      if(pa<pb) [a,b,pa,pb]=[b,a,pb,pa];
-      if(Math.random()<0.5){
-        q=`${a} + ${b} = ?`;
-        expect=letters[(pa+pb-1)%26];
-      } else {
-        q=`${a} - ${b} = ?`;
-        expect=letters[(pa-pb-1+26)%26];
-      }
-    }
-  }
-  state.current={expect:expect.toUpperCase()};
-  document.getElementById("question").textContent=q;
-  document.getElementById("answer").value="";
-  document.getElementById("answer").focus();
+function updateHighscore(){
+  let hs = highscores[state.mode]||0;
+  highEl.textContent = "High Score: "+hs;
 }
 
-document.getElementById("answer").addEventListener("keydown",function(e){
-  if(e.key==="Enter"){
-    const user=this.value.trim().toUpperCase();
-    if(user===state.current.expect){
-      state.correct++;
-      document.getElementById("correct").textContent=state.correct;
-      nextQuestion();
-    } else {
-      state.incorrect++;
-      document.getElementById("incorrect").textContent=state.incorrect;
-      this.value=""; this.focus();
-    }
-  }
+aEl.addEventListener("keydown", e=>{
+  if(e.key==="Enter") checkAnswer();
 });
 
-document.getElementById("mode").addEventListener("change",function(){
-  state.mode=this.value;
-  state.correct=0; state.incorrect=0;
-  document.getElementById("correct").textContent=0;
-  document.getElementById("incorrect").textContent=0;
-  document.getElementById("answer").disabled=false;
-  document.getElementById("result").textContent="";
+modeSel.addEventListener("change", ()=>{
+  state.mode = modeSel.value;
+  state.score = 0;
+  scoreEl.textContent="Score: 0";
+  updateHighscore();
   startTimer();
   nextQuestion();
 });
 
-window.onload=()=>{
-  document.getElementById("mode").value="MIX";
-  state.mode="MIX";
+function startGame(){
+  state.mode = "MIX";
+  modeSel.value = "MIX";
+  state.score = 0;
+  scoreEl.textContent="Score: 0";
+  updateHighscore();
   startTimer();
   nextQuestion();
-};
+}
+
+startGame();
 </script>
 </body>
 </html>
